- Fixed bug #33957 (gmdate('W')/date('W') sometimes returns wrong week number).